added custon nginx file

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
 
   <body>
     <div class="container">
-      <h1>Hello CloudSheger Gurus</h1>
+      <h1>Welcome To CloudSheger DevSecOps Class</h1>
       <p>This Nginx page is brought to you by Docker and CloudSheger</p>
     </div>
   </body>
